syntax = "proto3";
package v1;

option go_package = "gen/servers-registry/pb";

service ServersRegistryService {
  rpc RegisterGameServer(RegisterGameServerRequest) returns (RegisterGameServerResponse);
  rpc AvailableGameServersForMapAndRealm(AvailableGameServersForMapAndRealmRequest) returns (AvailableGameServersForMapAndRealmResponse);
  rpc RandomGameServerForRealm(RandomGameServerForRealmRequest) returns (RandomGameServerForRealmResponse);
  rpc ListGameServersForRealm(ListGameServersForRealmRequest) returns (ListGameServersForRealmResponse);

  rpc RegisterLoadBalancer(RegisterLoadBalancerRequest) returns (RegisterLoadBalancerResponse);
  rpc LoadBalancerForRealms(LoadBalancerForRealmsRequest) returns (LoadBalancerForRealmsResponse);
  rpc ListLoadBalancersForRealm(ListLoadBalancersForRealmRequest) returns (ListLoadBalancersForRealmResponse);
}

//
// RegisterGameServer
//
message RegisterGameServerRequest{
  string api = 1;

  uint32 gamePort = 2;
  uint32 healthPort = 3;
  uint32 grpcPort = 4;
  uint32 realmID = 5;
  string availableMaps = 6;
  string preferredHostName = 7;
}

message RegisterGameServerResponse{
  string api = 1;
}

//
// AvailableGameServersForMapAndRealm
//
message AvailableGameServersForMapAndRealmRequest{
  string api = 1;

  uint32 realmID = 2;
  uint32 mapID = 3;
}

message AvailableGameServersForMapAndRealmResponse{
  string api = 1;

  repeated Server gameServers = 2;
}

//
// RandomGameServerForRealm
//
message RandomGameServerForRealmRequest{
  string api = 1;

  uint32 realmID = 2;
}

message RandomGameServerForRealmResponse{
  string api = 1;

  Server gameServer = 2;
}

//
// ListGameServersForRealm
//
message ListGameServersForRealmRequest {
  string api = 1;

  uint32 realmID = 2;
}

message GameServerDetailed {
  string address = 1;
  string healthAddress = 2;
  string grpcAddress = 3;
  uint32 realmID = 4;
  repeated uint32 availableMaps = 5;
  repeated uint32 assignedMaps = 6;
}

message ListGameServersForRealmResponse {
  string api = 1;

  repeated GameServerDetailed gameServers = 2;
}

//
// RegisterLoadBalancer
//
message RegisterLoadBalancerRequest{
  string api = 1;

  uint32 gamePort = 2;
  uint32 healthPort = 3;
  uint32 realmID = 4;
  string preferredHostName = 5;
}

message RegisterLoadBalancerResponse{
  string api = 1;

  string id = 2;
}

//
// LoadBalancerForRealms
//
message LoadBalancerForRealmsRequest{
  string api = 1;

  repeated uint32 realmIDs = 2;
}

message LoadBalancerForRealmsResponse{
  string api = 1;

  repeated Server loadBalancers = 2;
}

//
// ListLoadBalancersForRealm
//
message ListLoadBalancersForRealmRequest {
  string api = 1;

  uint32 realmID = 2;
}

message LoadBalancerServerDetailed {
  string id = 1;
  string address = 2;
  string healthAddress = 3;
  uint32 realmID = 4;
  uint32 activeConnections = 5;
}

message ListLoadBalancersForRealmResponse {
  string api = 1;

  repeated LoadBalancerServerDetailed loadBalancers = 2;
}

//
// Shared
//
message Server {
  string address = 1;
  uint32 realmID = 2;
  string grpcAddress = 3;
}
